--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> صندوق عیار مفید</title>
+    <title>پورتفوی صندوق طلای عیار مفید</title>
     <style>
         @font-face {
             font-family: 'BNazanin';
@@ -64,8 +64,8 @@
     </div>
 
     <div class="container">
-        <h2>محاسبه ارزش و سود</h2>
-        <label for="currentPrice">قیمت فعلی هر واحد:</label>
+        <h2>محاسبه سود و زیان</h2>
+        <label for="currentPrice">قیمت فعلی هر واحد</label>
         <input type="number" id="currentPrice" placeholder="قیمت فعلی">
         <button onclick="calculate()">محاسبه</button>
         <div class="result" id="output"></div>
