--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
             let profit = currentValue - totalBuyAmount;
 
             document.getElementById("output").innerHTML = 
-                `مبلغ کل خرید: ${totalBuyAmount.toLocaleString()} تومان<br>
-                 ارزش فعلی: ${currentValue.toLocaleString()} تومان<br>
-                 میزان سود/زیان: ${profit.toLocaleString()} تومان`;
+                `مبلغ کل خرید: ${totalBuyAmount.toLocaleString()} ریال<br>
+                 ارزش فعلی: ${currentValue.toLocaleString()} ریال<br>
+                 میزان سود/زیان: ${profit.toLocaleString()} ریال`;
         }
     </script>
 </body>
