--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>بارگذاری اطلاعات از GitHub</h2>
+        <h2>بارگزاری اطلاعات از گیت هاب</h2>
         <button onclick="loadDataFromGitHub()">بارگذاری اطلاعات</button>
     </div>
 
@@ -73,7 +73,7 @@
 
     <script>
         let totalBuyAmount = 0, totalUnits = 0;
-        const GITHUB_FILE_URL = "https://raw.githubusercontent.com/alighadrboland/Gold-Porfolio/refs/heads/main/Gold.csv"; // لینک فایل CSV در گیت‌هاب
+        const GITHUB_FILE_URL = "https://raw.githubusercontent.com/alighadrboland/Gold-Porfolio/refs/heads/main/Gold.csv";
 
         function loadDataFromGitHub() {
             fetch(GITHUB_FILE_URL)
@@ -85,7 +85,7 @@
                         totalBuyAmount += (buyPrice * buyUnits || 0) - (sellPrice * sellUnits || 0);
                         totalUnits += (buyUnits || 0) - (sellUnits || 0);
                     });
-                    alert("اطلاعات از GitHub بارگذاری شد.");
+                    alert(".اطلاعات از گیت هاب بارگزاری شد");
                 })
                 .catch(error => alert("خطا در بارگذاری داده‌ها: " + error));
         }
@@ -100,11 +100,13 @@
 
             let currentValue = currentPrice * totalUnits;
             let profit = currentValue - totalBuyAmount;
+            let profitColor = profit >= 0 ? "green" : "red";
+            let profitText = profit >= 0 ? "میزان سود" : "میزان زیان";
 
             document.getElementById("output").innerHTML = 
                `مبلغ کل خرید: ${totalBuyAmount.toLocaleString('fa-IR')} ریال<br>
                 <span style="color: blue;">ارزش فعلی: ${currentValue.toLocaleString('fa-IR')} ریال</span><br>
-                <span style="color: green;">میزان سود: ${profit.toLocaleString('fa-IR')} ریال</span>`;
+                <span style="color: ${profitColor};">${profitText}: ${Math.abs(profit).toLocaleString('fa-IR')} ریال</span>`;
         }
     </script>
 </body>
