--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>پورتفوی صندوق طلای عیار مفید</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/moment-jalaali@0.9.1/moment-jalaali.js"></script>
     <style>
         @font-face {
             font-family: 'BNazanin';
@@ -84,17 +83,21 @@
 
     <script>
         let transactions = [];
-        const GITHUB_FILE_URL = "https://raw.githubusercontent.com/alighadrboland/Gold-Porfolio/refs/heads/main/Gold.csv";
+        const GITHUB_FILE_URL = "https://raw.githubusercontent.com/alighadrboland/Gold-Porfolio/refs/heads/main/Gold_Porfolio_Shamsi.csv";
 
         function loadDataFromGitHub() {
             fetch(GITHUB_FILE_URL)
                 .then(response => response.text())
                 .then(data => {
-                    // تاریخ‌ها را به فرمت فارسی تبدیل می‌کنیم
                     transactions = data.split("\n").map(line => {
-                        const [date, buyUnits, buyPrice] = line.split(",");
-                        const jalaaliDate = moment(date, "YYYY/MM/DD").format("jYYYY/jMM/jDD"); // تبدیل تاریخ میلادی به شمسی
-                        return { date: jalaaliDate, buyUnits: Number(buyUnits), buyPrice: Number(buyPrice) };
+                        const [date, buyPrice, buyUnits, sellPrice, sellUnits] = line.split(",");
+                        return { 
+                            date: date.trim(),
+                            buyPrice: Number(buyPrice),
+                            buyUnits: Number(buyUnits),
+                            sellPrice: Number(sellPrice),
+                            sellUnits: Number(sellUnits)
+                        };
                     });
                     alert("اطلاعات از GitHub بارگذاری شد.");
                 })
@@ -120,8 +123,11 @@
             let today = new Date();
 
             transactions.forEach(tx => {
-                let diffDays = (today - new Date(tx.date)) / (1000 * 3600 * 24);
+                let [shamsiYear, shamsiMonth, shamsiDay] = tx.date.split("/");
+                let dateObj = new Date(`${shamsiYear}-${shamsiMonth}-${shamsiDay}`);
+                let diffDays = (today - dateObj) / (1000 * 3600 * 24);
                 let profit = (currentPrice - tx.buyPrice) * tx.buyUnits;
+                
                 if (diffDays <= 7) profitData["یک هفته"] += profit;
                 if (diffDays <= 30) profitData["یک ماه"] += profit;
                 if (diffDays <= 90) profitData["سه ماه"] += profit;
